Third commit - update ipynb file including comments in every line of code

--- a/Ventas_online.ipynb
+++ b/Ventas_online.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initial imports\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -18,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the ventas_linea.csv dataset.\n",
     "ventas_linea_df = pd.read_csv('./ventas_linea.csv')"
    ]
   },
@@ -154,6 +156,7 @@
     }
    ],
    "source": [
+    "#Understand all the columns that exist in the data frame\n",
     "print(ventas_linea_df.columns)"
    ]
   },
@@ -270,6 +273,7 @@
     }
    ],
    "source": [
+    "# Keep all the branches that generate a transaction (SUC. (Sucursal)) on the create_uid column \n",
     "new_ventas_linea_df= ventas_linea_df['create_uid'].str.startswith('SUC')\n",
     "ventas_linea_df= ventas_linea_df.loc[new_ventas_linea_df,['id',\t'order_id',\t'product_id',\t'product_uom_qty',\t'create_uid',\t'price_unit',\t'price_subtotal']]\n",
     "ventas_linea_df.head()"
@@ -290,6 +294,7 @@
     }
    ],
    "source": [
+    "# Count if there is any 'False' values within our Df\n",
     "false_ventas_linea_df = (ventas_linea_df == 'False').sum().sum()\n",
     "print(f\"There are {false_ventas_linea_df } 'False' values in the data frame.\")"
    ]
@@ -407,6 +412,7 @@
     }
    ],
    "source": [
+    "# Drop all the 'False' values\n",
     "ventas_linea_df = ventas_linea_df[ventas_linea_df != 'False'].dropna()\n",
     "ventas_linea_df.head()"
    ]
@@ -426,6 +432,7 @@
     }
    ],
    "source": [
+    "# Double check that all 'False' values have been dropped.\n",
     "false_ventas_linea_df = (ventas_linea_df == 'False').sum().sum()\n",
     "print(f\"There are {false_ventas_linea_df } 'False' values in the data frame.\")"
    ]
@@ -878,6 +885,7 @@
     }
    ],
    "source": [
+    "# Reorganize the order of our index - columns\n",
     "new_ventas_linea_df = new_ventas_linea_df.reindex(columns=['id', 'Product_ID', 'Description', 'order_id',\n",
     "       'product_uom_qty', 'create_uid', 'price_unit', 'price_subtotal'])\n",
     "new_ventas_linea_df.head()"
@@ -893,10 +901,10 @@
     "# Define a list of words that represent devices\n",
     "accesories_words = ['MICA', 'GLASS', 'SIM', 'TARJETA', 'TIEMPO AIRE', 'OTTER' , 'ADAPTADOR DE CORRIENTE', 'USB', 'FLASH DRIVE']\n",
     "\n",
-    "# Check which rows contain any of the device-related words\n",
+    "# Check which rows contain any of the accesories-related words\n",
     "is_device = new_ventas_linea_df['Description'].str.contains('|'.join(accesories_words))\n",
     "\n",
-    "# Invert the boolean values to select only the rows where no device-related words are present\n",
+    "# Invert the boolean values to select only the rows where no accesories-related words are present\n",
     "ventas_linea_devices_df = new_ventas_linea_df[~is_device]"
    ]
   },
@@ -1100,6 +1108,7 @@
     }
    ],
    "source": [
+    "#Generate the dataframe showing only phones \n",
     "ventas_linea_devices_df "
    ]
   },
