--- a/ETL_products_csv.ipynb
+++ b/ETL_products_csv.ipynb
@@ -448,7 +448,10 @@
    "id": "7be39acf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating new CSV file\n",
+    "products_clean.to_csv()"
+   ]
   },
   {
    "cell_type": "code",
