Sixth Commit - update Stock_move.ipynb including comments on each cell of code

--- a/Stock_move.ipynb
+++ b/Stock_move.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initial imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime"
@@ -16,16 +17,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f4798b9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stock_move_df = pd.read_csv('./stock_move.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a712220b",
    "metadata": {},
    "outputs": [
     {
@@ -217,18 +208,20 @@
        "[516994 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load the ventas_linea.csv dataset.\n",
+    "stock_move_df = pd.read_csv('./stock_move.csv')\n",
     "stock_move_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f0354236",
    "metadata": {},
    "outputs": [
@@ -243,12 +236,13 @@
     }
    ],
    "source": [
+    "# Understand all the columns that exist in the data frame\n",
     "print(stock_move_df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c3dba12b",
    "metadata": {},
    "outputs": [
@@ -261,15 +255,15 @@
     }
    ],
    "source": [
-    "# count false values\n",
+    "# Count false values\n",
     "false_stock_move_df = (stock_move_df == 'False').sum().sum()\n",
     "print(f\"There are {false_stock_move_df} 'False' values in the data frame.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "aad15fcb",
+   "execution_count": 5,
+   "id": "a89a502d",
    "metadata": {},
    "outputs": [
     {
@@ -288,25 +282,25 @@
     }
    ],
    "source": [
-    "# count null values\n",
+    "# Count null values\n",
     "null_stock_move_df = stock_move_df.isnull().sum()\n",
     "print(f\"There are {null_stock_move_df} 'Null' values in the data frame.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7a65ccd3",
+   "execution_count": 6,
+   "id": "9a385c9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop null values\n",
+    "# Drop null values\n",
     "null_stock_move_df = stock_move_df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4bd1a1c7",
    "metadata": {},
    "outputs": [
@@ -374,7 +368,7 @@
        "4      25926  'USB FLASH DRIVE 16GB'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "72ae7a58",
+   "execution_count": 8,
+   "id": "34026c53",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +490,7 @@
        "[516994 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,8 +505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "33502347",
+   "execution_count": 9,
+   "id": "33721b56",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +612,7 @@
        "[516994 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e6f6d1ea",
    "metadata": {},
    "outputs": [
@@ -875,7 +869,7 @@
        "[516994 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,26 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4301e890",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a list of words that represent devices\n",
-    "accesories_words = ['MICA', 'MICRO', 'SOPORTE', 'GLASS', 'SIM', 'TARJETA', 'TIEMPO AIRE', 'OTTER' , \n",
-    "                    'ADAPTADOR DE CORRIENTE', 'USB', 'FLASH DRIVE', 'AUDIFONO', 'AUDÍFONOS', 'FDA',\n",
-    "                   'CARGADOR', 'PORTA', 'CABLE','TABLET']\n",
-    "# Check which rows contain any of the device-related words\n",
-    "is_device =new_stock_move_df ['Description'].str.contains('|'.join(accesories_words))\n",
-    "\n",
-    "# Invert the boolean values to select only the rows where no device-related words are present\n",
-    "new_stock_move_df = new_stock_move_df[~is_device]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5ad97fca",
    "metadata": {},
    "outputs": [
     {
@@ -1150,26 +1126,35 @@
        "[130027 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Define a list of words that represent devices\n",
+    "accesories_words = ['MICA', 'MICRO', 'SOPORTE', 'GLASS', 'SIM', 'TARJETA', 'TIEMPO AIRE', 'OTTER' , \n",
+    "                    'ADAPTADOR DE CORRIENTE', 'USB', 'FLASH DRIVE', 'AUDIFONO', 'AUDÍFONOS', 'FDA',\n",
+    "                   'CARGADOR', 'PORTA', 'CABLE','TABLET']\n",
+    "# Check which rows contain any of the device-related words\n",
+    "is_device =new_stock_move_df ['Description'].str.contains('|'.join(accesories_words))\n",
+    "\n",
+    "# Invert the boolean values to select only the rows where no device-related words are present\n",
+    "new_stock_move_df = new_stock_move_df[~is_device]\n",
     "new_stock_move_df "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b5ea90de",
+   "execution_count": 12,
+   "id": "c964f76b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rdono\\AppData\\Local\\Temp\\ipykernel_75272\\1119673700.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\rdono\\AppData\\Local\\Temp\\ipykernel_51812\\3081071139.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1214,7 +1199,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>87634</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2022-04-13 16:46:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25761</td>\n",
@@ -1227,7 +1212,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>87635</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2022-04-13 16:46:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25550</td>\n",
@@ -1240,7 +1225,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>87636</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2022-04-13 16:46:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>24903</td>\n",
@@ -1253,7 +1238,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>87637</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2022-04-13 16:46:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25549</td>\n",
@@ -1266,7 +1251,7 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>110449</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2022-05-04 14:15:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25758</td>\n",
@@ -1292,7 +1277,7 @@
        "    <tr>\n",
        "      <th>516891</th>\n",
        "      <td>488917</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2023-01-20 19:41:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>19506</td>\n",
@@ -1305,7 +1290,7 @@
        "    <tr>\n",
        "      <th>516909</th>\n",
        "      <td>491553</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2023-01-23 17:42:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25648</td>\n",
@@ -1318,7 +1303,7 @@
        "    <tr>\n",
        "      <th>516930</th>\n",
        "      <td>504804</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2023-02-02 19:51:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25691</td>\n",
@@ -1331,7 +1316,7 @@
        "    <tr>\n",
        "      <th>516973</th>\n",
        "      <td>526934</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2023-02-18 16:57:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>29542</td>\n",
@@ -1344,7 +1329,7 @@
        "    <tr>\n",
        "      <th>516991</th>\n",
        "      <td>534429</td>\n",
-       "      <td>2022-05-09</td>\n",
+       "      <td>2023-02-23 23:39:00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>done</td>\n",
        "      <td>25596</td>\n",
@@ -1360,18 +1345,18 @@
        "</div>"
       ],
       "text/plain": [
-       "            id       date  qty_done state Product_ID  \\\n",
-       "0        87634 2022-05-09       1.0  done      25761   \n",
-       "1        87635 2022-05-09       1.0  done      25550   \n",
-       "2        87636 2022-05-09       1.0  done      24903   \n",
-       "3        87637 2022-05-09       1.0  done      25549   \n",
-       "21      110449 2022-05-09       1.0  done      25758   \n",
-       "...        ...        ...       ...   ...        ...   \n",
-       "516891  488917 2022-05-09       1.0  done      19506   \n",
-       "516909  491553 2022-05-09       1.0  done      25648   \n",
-       "516930  504804 2022-05-09       1.0  done      25691   \n",
-       "516973  526934 2022-05-09       1.0  done      29542   \n",
-       "516991  534429 2022-05-09       1.0  done      25596   \n",
+       "            id                date  qty_done state Product_ID  \\\n",
+       "0        87634 2022-04-13 16:46:00       1.0  done      25761   \n",
+       "1        87635 2022-04-13 16:46:00       1.0  done      25550   \n",
+       "2        87636 2022-04-13 16:46:00       1.0  done      24903   \n",
+       "3        87637 2022-04-13 16:46:00       1.0  done      25549   \n",
+       "21      110449 2022-05-04 14:15:00       1.0  done      25758   \n",
+       "...        ...                 ...       ...   ...        ...   \n",
+       "516891  488917 2023-01-20 19:41:00       1.0  done      19506   \n",
+       "516909  491553 2023-01-23 17:42:00       1.0  done      25648   \n",
+       "516930  504804 2023-02-02 19:51:00       1.0  done      25691   \n",
+       "516973  526934 2023-02-18 16:57:00       1.0  done      29542   \n",
+       "516991  534429 2023-02-23 23:39:00       1.0  done      25596   \n",
        "\n",
        "                                              Description ID_Warehouse  \\\n",
        "0                                    'SAM A22 4/64 NEGRO'           13   \n",
@@ -1415,19 +1400,20 @@
        "[130027 rows x 10 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Convert date to datetime\n",
     "new_stock_move_df[\"date\"] = new_stock_move_df[\"date\"].astype('datetime64[ns]')\n",
     "new_stock_move_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "08d03c89",
    "metadata": {},
    "outputs": [],
