--- a/ETL_products_csv.ipynb
+++ b/ETL_products_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "cb5d90a8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "7e9db9b6",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "[9121 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "7541c09a",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "       'ACCESORIO / MICA / GENERAL-HIDRO DISEÑO'], dtype=object)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "2fae6b45",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "b3c7d9f2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "1c08537c",
    "metadata": {
     "scrolled": true
@@ -407,7 +407,7 @@
        "[840 rows x 3 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "5ad7af08",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,13 +444,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "de599607",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>categ_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>19127</td>\n",
+       "      <td>ALC 5003A-1C 1/16 NEGRO</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / LIBRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>19128</td>\n",
+       "      <td>ALC 5003A-1C 1/16 NEGRO</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / LIBRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>19129</td>\n",
+       "      <td>ALC 5003A-1C 1/16 ROSA</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / LIBRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>19130</td>\n",
+       "      <td>ALC 5033M 1/16 AZUL</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / LIBRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>19131</td>\n",
+       "      <td>ALC 5033M 1/16 NEGRO</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / LIBRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9106</th>\n",
+       "      <td>26058</td>\n",
+       "      <td>ZTE LTE 8030 BLADE V30 VITA GRIS KIT</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / TELCEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9108</th>\n",
+       "      <td>26060</td>\n",
+       "      <td>ZTE LTE 8030 BLADE V30 VITA VERDE KIT</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / TELCEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9110</th>\n",
+       "      <td>26063</td>\n",
+       "      <td>ZTE LTE A7020 BLADE A7S AZUL KIT</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / TELCEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9114</th>\n",
+       "      <td>26073</td>\n",
+       "      <td>ZTE LTE BLADE A520 DORADO KIT</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / TELCEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9115</th>\n",
+       "      <td>26074</td>\n",
+       "      <td>ZTE LTE BLADE V10 VITA VERDE</td>\n",
+       "      <td>DISPOSITIVO / CELULAR / TELCEL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>843 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Product_ID                            Description  \\\n",
+       "235        19127                ALC 5003A-1C 1/16 NEGRO   \n",
+       "236        19128                ALC 5003A-1C 1/16 NEGRO   \n",
+       "237        19129                 ALC 5003A-1C 1/16 ROSA   \n",
+       "238        19130                    ALC 5033M 1/16 AZUL   \n",
+       "240        19131                   ALC 5033M 1/16 NEGRO   \n",
+       "...          ...                                    ...   \n",
+       "9106       26058   ZTE LTE 8030 BLADE V30 VITA GRIS KIT   \n",
+       "9108       26060  ZTE LTE 8030 BLADE V30 VITA VERDE KIT   \n",
+       "9110       26063       ZTE LTE A7020 BLADE A7S AZUL KIT   \n",
+       "9114       26073          ZTE LTE BLADE A520 DORADO KIT   \n",
+       "9115       26074           ZTE LTE BLADE V10 VITA VERDE   \n",
+       "\n",
+       "                            categ_id  \n",
+       "235    DISPOSITIVO / CELULAR / LIBRE  \n",
+       "236    DISPOSITIVO / CELULAR / LIBRE  \n",
+       "237    DISPOSITIVO / CELULAR / LIBRE  \n",
+       "238    DISPOSITIVO / CELULAR / LIBRE  \n",
+       "240    DISPOSITIVO / CELULAR / LIBRE  \n",
+       "...                              ...  \n",
+       "9106  DISPOSITIVO / CELULAR / TELCEL  \n",
+       "9108  DISPOSITIVO / CELULAR / TELCEL  \n",
+       "9110  DISPOSITIVO / CELULAR / TELCEL  \n",
+       "9114  DISPOSITIVO / CELULAR / TELCEL  \n",
+       "9115  DISPOSITIVO / CELULAR / TELCEL  \n",
+       "\n",
+       "[843 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products_clean.rename(columns = {'product_id':'Product_ID'}, inplace = True)\n",
+    "products_clean.rename(columns = {'name':'Description'}, inplace = True)\n",
+    "products_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "7be39acf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating new CSV file\n",
-    "products_clean.to_csv()"
+    "products_clean.to_csv('./productos_clean.csv')"
    ]
   },
   {
