Rename code and update table

--- a/Code_for_Machine_learning.ipynb
+++ b/Code_for_Machine_learning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "53689a5f",
+   "id": "61fb023e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "443aa53b",
+   "id": "c9a30e97",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db6f167a",
+   "id": "4e869711",
    "metadata": {},
    "outputs": [
     {
@@ -390,19 +390,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5c327c2b",
+   "execution_count": 8,
+   "id": "d3e3df5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>month</th>\n",
+       "      <th>qty</th>\n",
+       "      <th>price_unit</th>\n",
+       "      <th>total_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2547</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>December</td>\n",
+       "      <td>253</td>\n",
+       "      <td>3,575.06</td>\n",
+       "      <td>904,489.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2911</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>January</td>\n",
+       "      <td>237</td>\n",
+       "      <td>3,510.55</td>\n",
+       "      <td>832,000.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2227</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>November</td>\n",
+       "      <td>190</td>\n",
+       "      <td>3,891.20</td>\n",
+       "      <td>741,901.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1629</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>September</td>\n",
+       "      <td>182</td>\n",
+       "      <td>4,025.92</td>\n",
+       "      <td>729,146.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>May</td>\n",
+       "      <td>140</td>\n",
+       "      <td>4,572.41</td>\n",
+       "      <td>640,137.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1317</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>August</td>\n",
+       "      <td>148</td>\n",
+       "      <td>4,299.02</td>\n",
+       "      <td>636,254.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>July</td>\n",
+       "      <td>141</td>\n",
+       "      <td>4,311.32</td>\n",
+       "      <td>607,895.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>May</td>\n",
+       "      <td>134</td>\n",
+       "      <td>4,516.96</td>\n",
+       "      <td>605,273.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1038</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>July</td>\n",
+       "      <td>141</td>\n",
+       "      <td>4,222.18</td>\n",
+       "      <td>595,326.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2909</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>MOTO</td>\n",
+       "      <td>January</td>\n",
+       "      <td>208</td>\n",
+       "      <td>2,858.29</td>\n",
+       "      <td>594,251.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1932</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>October</td>\n",
+       "      <td>162</td>\n",
+       "      <td>3,637.02</td>\n",
+       "      <td>589,197.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2745</th>\n",
+       "      <td>LEON CENTRO (LEON)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>December</td>\n",
+       "      <td>196</td>\n",
+       "      <td>2,987.60</td>\n",
+       "      <td>585,569.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2971</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>January</td>\n",
+       "      <td>140</td>\n",
+       "      <td>4,057.88</td>\n",
+       "      <td>568,103.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3100</th>\n",
+       "      <td>LEON CENTRO (LEON)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>January</td>\n",
+       "      <td>171</td>\n",
+       "      <td>3,209.40</td>\n",
+       "      <td>547,059.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2611</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>December</td>\n",
+       "      <td>134</td>\n",
+       "      <td>4,046.49</td>\n",
+       "      <td>542,229.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>April</td>\n",
+       "      <td>117</td>\n",
+       "      <td>4,387.58</td>\n",
+       "      <td>513,347.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>712</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>June</td>\n",
+       "      <td>109</td>\n",
+       "      <td>4,692.70</td>\n",
+       "      <td>511,504.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1370</th>\n",
+       "      <td>CORREGIDORA 2 (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>August</td>\n",
+       "      <td>110</td>\n",
+       "      <td>4,495.42</td>\n",
+       "      <td>494,495.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490</th>\n",
+       "      <td>LEON CENTRO (LEON)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>August</td>\n",
+       "      <td>119</td>\n",
+       "      <td>3,787.90</td>\n",
+       "      <td>450,759.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>657</th>\n",
+       "      <td>ALLENDE (QRO)</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>June</td>\n",
+       "      <td>106</td>\n",
+       "      <td>4,216.71</td>\n",
+       "      <td>445,254.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     name brand      month  qty  price_unit  total_sales\n",
+       "2547        ALLENDE (QRO)   SAM   December  253    3,575.06   904,489.00\n",
+       "2911        ALLENDE (QRO)   SAM    January  237    3,510.55   832,000.06\n",
+       "2227        ALLENDE (QRO)   SAM   November  190    3,891.20   741,901.21\n",
+       "1629        ALLENDE (QRO)   SAM  September  182    4,025.92   729,146.39\n",
+       "326         ALLENDE (QRO)   SAM        May  140    4,572.41   640,137.86\n",
+       "1317        ALLENDE (QRO)   SAM     August  148    4,299.02   636,254.56\n",
+       "972         ALLENDE (QRO)   SAM       July  141    4,311.32   607,895.78\n",
+       "381   CORREGIDORA 2 (QRO)   SAM        May  134    4,516.96   605,273.24\n",
+       "1038  CORREGIDORA 2 (QRO)   SAM       July  141    4,222.18   595,326.85\n",
+       "2909        ALLENDE (QRO)  MOTO    January  208    2,858.29   594,251.66\n",
+       "1932        ALLENDE (QRO)   SAM    October  162    3,637.02   589,197.79\n",
+       "2745   LEON CENTRO (LEON)   SAM   December  196    2,987.60   585,569.18\n",
+       "2971  CORREGIDORA 2 (QRO)   SAM    January  140    4,057.88   568,103.59\n",
+       "3100   LEON CENTRO (LEON)   SAM    January  171    3,209.40   547,059.48\n",
+       "2611  CORREGIDORA 2 (QRO)   SAM   December  134    4,046.49   542,229.56\n",
+       "75    CORREGIDORA 2 (QRO)   SAM      April  117    4,387.58   513,347.31\n",
+       "712   CORREGIDORA 2 (QRO)   SAM       June  109    4,692.70   511,504.31\n",
+       "1370  CORREGIDORA 2 (QRO)   SAM     August  110    4,495.42   494,495.84\n",
+       "1490   LEON CENTRO (LEON)   SAM     August  119    3,787.90   450,759.67\n",
+       "657         ALLENDE (QRO)   SAM       June  106    4,216.71   445,254.18"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define a list of words that represent devices\n",
+    "accesories_words = ['ROUTER']\n",
+    "\n",
+    "# Check which rows contain any of the accesories-related words\n",
+    "is_device = final_ventas_df['brand'].str.contains('|'.join(accesories_words))\n",
+    "\n",
+    "# Invert the boolean values to select only the rows where no accesories-related words are present\n",
+    "final_ventas_devices_df = final_ventas_df[~is_device]\n",
+    "final_ventas_devices_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "128384c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the new DataFrame to a CSV file\n",
-    "final_ventas_df.to_csv('final_ventas.csv', index=False)"
+    "final_ventas_devices_df.to_csv('final_ventas.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d0d63f",
+   "id": "3224bf39",
    "metadata": {},
    "outputs": [],
    "source": []
